# caffestudy

./: LICENSE  README.md  index.html  params.json
examples/: .directory
examples/caffetest/: main.cpp  test_math.cpp
examples/cudatest/: axpygpu.cu  axpygpu.h
examples/ex0_cudatest/: CMakeLists.txt  main.cpp
examples/ex1_hellocaffe/: CMakeLists.txt  main.cpp
examples/ex2_blob/: CMakeLists.txt  ex_blob.cpp  ex_math.cpp  main.cpp
examples/ex3_dataset/: CMakeLists.txt  ex_dataset.cpp
examples/ex3_layer/: CMakeLists.txt  main.cpp
examples/ex4_net/: CMakeLists.txt  bindb.cpp  logreg_test.cpp  logreg_train.cpp
